--- a/index.html
+++ b/index.html
@@ -65,88 +65,96 @@
             <h1 class="text-center">Customer Management</h1>
             <div class="row">
                 <!-- Table Column -->
-                <div class="col-lg-6 mt-5" style="margin-left: 100px">
-                    <div class="row">
-                        <div class="input-group mt-3 mb-4">
-                            <input type="search" class="form-control text-white bg-transparent" placeholder="Enter ID"
-                                   aria-label="Enter ID" aria-describedby="basic-addon2" style="border-radius: 5px">
-                            <div class="input-group-append">
-                                <button class="btn btn-success" style="width: 150px; margin-left: 20px;">Search</button>
+                <div class="col-lg-6 mx-auto mt-5">
+                    <div class="bg-dark rounded-3 p-4">
+                        <div class="row mb-4">
+                            <div class="input-group">
+                                <input type="search" class="form-control text-white bg-transparent"
+                                       placeholder="Enter ID"
+                                       aria-label="Enter ID" aria-describedby="basic-addon2" style="border-radius: 5px">
+                                <div class="input-group-append">
+                                    <button class="btn btn-success" style="width: 150px; margin-left: 20px;">Search
+                                    </button>
+                                </div>
+                            </div>
+
+                        </div>
+                        <div class="col-lg-12">
+                            <table class="table table-hover table-bordered table-dark">
+                                <thead>
+                                <tr>
+                                    <th>Customer Id</th>
+                                    <th>Customer Name</th>
+                                    <th>Customer Address</th>
+                                    <th>Customer Salary</th>
+                                </tr>
+                                </thead>
+                                <tbody>
+                                <tr>
+                                    <td>C001</td>
+                                    <td>Thushal</td>
+                                    <td>Galle</td>
+                                    <td>55000</td>
+                                </tr>
+                                <tr>
+                                    <td>C002</td>
+                                    <td>Kamal</td>
+                                    <td>Colombo</td>
+                                    <td>99000</td>
+                                </tr>
+                                <tr>
+                                    <td>C003</td>
+                                    <td>Namal</td>
+                                    <td>Matara</td>
+                                    <td>34000</td>
+                                </tr>
+                                <tr>
+                                    <td>C004</td>
+                                    <td>Sugath</td>
+                                    <td>Kandy</td>
+                                    <td>78000</td>
+                                </tr>
+                                <tr>
+                                    <td>C005</td>
+                                    <td>Sindhu</td>
+                                    <td>Jaffna</td>
+                                    <td>56000</td>
+                                </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                        <div class="row justify-content-end mt-4">
+                            <div class="col-auto">
+                                <button class="btn btn-success" style="width: 150px;">Get All</button>
                             </div>
                         </div>
-
-                    </div>
-
-                    <div class="col-lg-12">
-                        <table class="table table-hover table-bordered table-dark">
-                            <thead>
-                            <tr>
-                                <th>Customer Id</th>
-                                <th>Customer Name</th>
-                                <th>Customer Address</th>
-                                <th>Customer Salary</th>
-                            </tr>
-                            </thead>
-                            <tbody>
-                            <tr>
-                                <td>C001</td>
-                                <td>Thushal</td>
-                                <td>Galle</td>
-                                <td>55000</td>
-                            </tr>
-                            <tr>
-                                <td>C002</td>
-                                <td>Kamal</td>
-                                <td>Colombo</td>
-                                <td>99000</td>
-                            </tr>
-                            <tr>
-                                <td>C003</td>
-                                <td>Namal</td>
-                                <td>Matara</td>
-                                <td>34000</td>
-                            </tr>
-                            <tr>
-                                <td>C004</td>
-                                <td>Sugath</td>
-                                <td>Kandy</td>
-                                <td>78000</td>
-                            </tr>
-                            <tr>
-                                <td>C005</td>
-                                <td>Sindhu</td>
-                                <td>Jaffna</td>
-                                <td>56000</td>
-                            </tr>
-                            </tbody>
-                        </table>
                     </div>
                 </div>
 
                 <!-- Form Column -->
-                <div class="col-md-4 mx-auto mt-5">
+                <div class="col-lg-4 mx-auto mt-5">
                     <div class="bg-dark rounded-3 p-4">
                         <h3 class="text-center mb-4" style="color: dodgerblue">Manage Customers</h3>
 
                         <!-- Inputs -->
                         <form>
-                            <div class="input-group mb-3">
-                                <div class="input-group mb-3">
+                            <div class="input-group">
+                                <div class="input-group mb-4 mt-4">
                                     <input type="text" class="form-control text-white" placeholder="Customer ID"
                                            aria-label="Customer ID"
                                            aria-describedby="basic-addon2" style="background-color: #333333">
                                 </div>
-                                <div class="input-group mb-3">
+                                <div class="input-group mb-4">
                                     <input type="text" class="form-control text-white" placeholder="Customer Name"
                                            aria-label="Customer Name"
                                            aria-describedby="basic-addon2" style="background-color: #333333">
                                 </div>
-                                <div class="input-group mb-3">
+                                <div class="input-group mb-4">
                                     <input type="text" class="form-control text-white" placeholder="Customer Address"
                                            aria-label="Customer Address"
                                            aria-describedby="basic-addon2" style="background-color: #333333">
                                 </div>
-                                <div class="input-group mb-3">
+                                <div class="input-group mb-4">
                                     <input type="text" class="form-control text-white" placeholder="Customer Salary"
                                            aria-label="Customer Salary"
                                            aria-describedby="basic-addon2" style="background-color: #333333">
@@ -157,13 +165,12 @@
                         <!-- Buttons -->
                         <div class="row justify-content-between">
                             <div class="col-auto">
-                                <button class="btn btn-danger" style="width: 150px;">Clear</button>
+                                <button class="btn btn-danger mb-2" style="width: 150px;">Clear</button>
                             </div>
                             <div class="col-auto">
                                 <button class="btn btn-primary" style="width: 150px;">Save</button>
                             </div>
                         </div>
-
                     </div>
                 </div>
             </div>
