--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
                                     <th>Customer Name</th>
                                     <th>Customer Address</th>
                                     <th>Customer Salary</th>
-                                    <th>Action</th> <!-- New column for the delete button -->
+                                    <th>Remove</th> <!-- New column for the delete button -->
                                 </tr>
                                 </thead>
                                 <tbody>
@@ -360,10 +360,10 @@
                                 <thead>
                                 <tr>
                                     <th>Item Code</th>
-                                    <th>Item Name</th>
+                                    <th>Item Description</th>
                                     <th>Qty On Hand</th>
                                     <th>Unit Price</th>
-                                    <th>Action</th> <!-- New column for the delete button -->
+                                    <th>Remove</th> <!-- New column for the delete button -->
                                 </tr>
                                 </thead>
                                 <tbody>
@@ -437,8 +437,8 @@
                                            aria-describedby="basic-addon2" style="background-color: #3c3c3c">
                                 </div>
                                 <div class="input-group mx-auto mb-4" style="width: 350px">
-                                    <input type="text" class="form-control text-white" placeholder="Item Name"
-                                           aria-label="Item Name"
+                                    <input type="text" class="form-control text-white" placeholder="Item Description"
+                                           aria-label="Item Description"
                                            aria-describedby="basic-addon2" style="background-color: #3c3c3c">
                                 </div>
                                 <div class="input-group mx-auto mb-4" style="width: 350px">
