--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                         <a class="nav-link active" href="#">Items</a>
                     </li>
                     <li id="btnOrders" class="nav-item">
-                        <a class="nav-link active" href="#">Orders</a>
+                        <a class="nav-link active" href="#">Place Order</a>
                     </li>
                     <li id="btnOrderDetails" class="nav-item">
                         <a class="nav-link active" href="#">Order Details</a>
@@ -471,131 +471,139 @@
 
     <section id="orders" style="margin-top: 100px">
         <div class="container-fluid">
-            <h1 class="text-center">Order Management</h1>
+            <h1 class="text-center">Place Order</h1>
             <div class="row">
-                <!-- Table Column -->
-                <div class="col-lg-6 mx-auto mt-5">
-                    <div class="bg-dark rounded-3 p-4">
-                        <div class="row mb-4">
-                            <div class="input-group">
-                                <input type="search" class="form-control text-white bg-transparent"
-                                       placeholder="Enter Item Code"
-                                       aria-label="Enter Item Code" aria-describedby="basic-addon2"
-                                       style="border-radius: 5px">
-                                <div class="input-group-append">
-                                    <button class="btn btn-secondary" style="width: 100px; margin-left: 20px;">Search
-                                    </button>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-12">
-                            <table class="table table-hover table-bordered table-dark">
-                                <thead>
-                                <tr>
-                                    <th>Item Code</th>
-                                    <th>Item Name</th>
-                                    <th>Qty On HAnd</th>
-                                    <th>Price</th>
-                                    <th>Action</th> <!-- New column for the delete button -->
-                                </tr>
-                                </thead>
-                                <tbody>
-                                <tr>
-                                    <td>I001</td>
-                                    <td>MSI Katana</td>
-                                    <td>45</td>
-                                    <td>350000</td>
-                                    <td>
-                                        <button class="btn btn-danger btn-sm">Delete</button>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>I002</td>
-                                    <td>MSI Sword</td>
-                                    <td>67</td>
-                                    <td>335000</td>
-                                    <td>
-                                        <button class="btn btn-danger btn-sm">Delete</button>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>I003</td>
-                                    <td>Asus TUF</td>
-                                    <td>89</td>
-                                    <td>300000</td>
-                                    <td>
-                                        <button class="btn btn-danger btn-sm">Delete</button>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>I004</td>
-                                    <td>Asus ROG</td>
-                                    <td>23</td>
-                                    <td>400000</td>
-                                    <td>
-                                        <button class="btn btn-danger btn-sm">Delete</button>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>I005</td>
-                                    <td>Dell</td>
-                                    <td>345</td>
-                                    <td>225000</td>
-                                    <td>
-                                        <button class="btn btn-danger btn-sm">Delete</button>
-                                    </td>
-                                </tr>
-                                </tbody>
-                            </table>
-                        </div>
-                        <div class="row justify-content-end mt-4">
-                            <div class="col-auto">
-                                <button class="btn btn-success" style="width: 100px;">Get All</button>
-                            </div>
-                        </div>
-                    </div>
-                </div>
 
-                <!-- Form Column -->
-                <div class="col-lg-4 mx-auto mt-5">
+                <!-- Invoice Details -->
+                <div class="col-lg-4 mx-auto m-5">
                     <div class="bg-dark rounded-3 p-4">
-                        <h3 class="text-center mb-4" style="color: dodgerblue">Manage Items</h3>
-
-                        <!-- Inputs -->
+                        <h3 class="text-center mb-4" style="color: dodgerblue">Invoice Details</h3>
                         <form>
-                            <div class="input-group">
-                                <div class="input-group mx-auto mb-4 mt-4" style="width: 350px">
-                                    <input type="text" class="form-control text-white" placeholder="Item Code"
-                                           aria-label="Item Code"
-                                           aria-describedby="basic-addon2" style="background-color: #3c3c3c">
+                            <div class="row">
+                                <div class="input-group mx-auto">
+                                    <input type="text" class="form-control text-white m-3 rounded-2"
+                                           placeholder="Order ID"
+                                           aria-label="Order ID" aria-describedby="basic-addon2"
+                                           style="background-color: #3c3c3c">
+                                    <input type="text" class="form-control text-white m-3 rounded-2"
+                                           placeholder="Order Date"
+                                           aria-label="Order Date" aria-describedby="basic-addon2"
+                                           style="background-color: #3c3c3c">
                                 </div>
-                                <div class="input-group mx-auto mb-4" style="width: 350px">
-                                    <input type="text" class="form-control text-white" placeholder="Item Name"
-                                           aria-label="Item Name"
-                                           aria-describedby="basic-addon2" style="background-color: #3c3c3c">
+                            </div>
+                            <div class="row">
+                                <div class="input-group mx-auto">
+                                    <input type="text" class="form-control text-white m-3 rounded-2"
+                                           placeholder="Customer ID"
+                                           aria-label="Customer ID" aria-describedby="basic-addon2"
+                                           style="background-color: #3c3c3c">
+                                    <input type="text" class="form-control text-white m-3 rounded-2"
+                                           placeholder="Name"
+                                           aria-label="Name" aria-describedby="basic-addon2"
+                                           style="background-color: #3c3c3c">
                                 </div>
-                                <div class="input-group mx-auto mb-4" style="width: 350px">
-                                    <input type="text" class="form-control text-white" placeholder="Qty On Hand"
-                                           aria-label="Qty On Hand"
-                                           aria-describedby="basic-addon2" style="background-color: #3c3c3c">
-                                </div>
-                                <div class="input-group mx-auto mb-4" style="width: 350px">
-                                    <input type="text" class="form-control text-white" placeholder="Price"
-                                           aria-label="Price"
-                                           aria-describedby="basic-addon2" style="background-color: #3c3c3c">
+                            </div>
+                            <div class="row">
+                                <div class="input-group mx-auto">
+                                    <input type="text" class="form-control text-white m-3 rounded-2"
+                                           placeholder="Address"
+                                           aria-label="Address" aria-describedby="basic-addon2"
+                                           style="background-color: #3c3c3c">
+                                    <input type="text" class="form-control text-white m-3 rounded-2"
+                                           placeholder="Salary"
+                                           aria-label="Salary" aria-describedby="basic-addon2"
+                                           style="background-color: #3c3c3c">
                                 </div>
                             </div>
                         </form>
+                    </div>
+                </div>
 
-                        <!-- Buttons -->
-                        <div class="row justify-content-evenly mt-4">
-                            <div class="col-auto">
-                                <button class="btn btn-danger mb-2" style="width: 100px">Clear</button>
+                <!-- Item Details -->
+                <div class="col-lg-4 mx-auto m-5">
+                    <div class="bg-dark rounded-3 p-4">
+                        <h3 class="text-center mb-4" style="color: dodgerblue">Item Details</h3>
+                        <form>
+                            <div class="row">
+                                <div class="input-group mx-auto">
+                                    <input type="text" class="form-control text-white m-3 rounded-2"
+                                           placeholder="Item Code"
+                                           aria-label="Item Code" aria-describedby="basic-addon2"
+                                           style="background-color: #3c3c3c">
+                                    <input type="text" class="form-control text-white m-3 rounded-2"
+                                           placeholder="Item Name"
+                                           aria-label="Item Name" aria-describedby="basic-addon2"
+                                           style="background-color: #3c3c3c">
+                                </div>
                             </div>
-                            <div class="col-auto">
-                                <button class="btn btn-primary" style="width: 100px">Add</button>
+                            <div class="row">
+                                <div class="input-group mx-auto">
+                                    <input type="text" class="form-control text-white m-3 rounded-2"
+                                           placeholder="Qty On Hand"
+                                           aria-label="Qty On Hand" aria-describedby="basic-addon2"
+                                           style="background-color: #3c3c3c">
+                                    <input type="text" class="form-control text-white m-3 rounded-2"
+                                           placeholder="Unit Price"
+                                           aria-label="Unit Price" aria-describedby="basic-addon2"
+                                           style="background-color: #3c3c3c">
+                                </div>
                             </div>
-                        </div>
+                            <div class="row">
+                                <div class="input-group mx-auto">
+                                    <input type="text" class="form-control text-white m-3 rounded-2"
+                                           placeholder="Buying Qty"
+                                           aria-label="Buying Qty" aria-describedby="basic-addon2"
+                                           style="background-color: #3c3c3c">
+                                    <div class="col-auto m-3">
+                                        <button class="btn btn-primary">Add to Cart</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+
+                <!-- Payment Details -->
+                <div class="col-lg-4 mx-auto m-5">
+                    <div class="bg-dark rounded-3 p-4">
+                        <h3 class="text-center mb-4" style="color: dodgerblue">Payment Details</h3>
+                        <form>
+                            <div class="row">
+                                <div class="input-group mx-auto">
+                                    <input type="text" class="form-control text-white m-3 rounded-2"
+                                           placeholder="Total"
+                                           aria-label="Total" aria-describedby="basic-addon2"
+                                           style="background-color: #3c3c3c">
+                                    <input type="text" class="form-control text-white m-3 rounded-2"
+                                           placeholder="Discount"
+                                           aria-label="Discount" aria-describedby="basic-addon2"
+                                           style="background-color: #3c3c3c">
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="input-group mx-auto">
+                                    <input type="text" class="form-control text-white m-3 rounded-2"
+                                           placeholder="Net Total"
+                                           aria-label="Net Total" aria-describedby="basic-addon2"
+                                           style="background-color: #3c3c3c">
+                                    <input type="text" class="form-control text-white m-3 rounded-2"
+                                           placeholder="Cash"
+                                           aria-label="Cash" aria-describedby="basic-addon2"
+                                           style="background-color: #3c3c3c">
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="input-group mx-auto">
+                                    <input type="text" class="form-control text-white m-3 rounded-2"
+                                           placeholder="Balance"
+                                           aria-label="Balance" aria-describedby="basic-addon2"
+                                           style="background-color: #3c3c3c">
+                                    <div class="col-auto m-3">
+                                        <button class="btn btn-success">Purchase</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </form>
                     </div>
                 </div>
             </div>
